# neurabreak

./: .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release-windows.yml
packaging/linux/: build_deb.sh  neurabreak.desktop
packaging/macos/: build.py
packaging/windows/: build.spec  installer.iss  version_info.txt
packaging/windows/hooks/: rthook_pyside6.py
src/neurabreak/: __init__.py  __main__.py
src/neurabreak/ai/: camera.py  detection_service.py  engine.py  postprocessor.py
src/neurabreak/core/: config.py  events.py  logging.py  startup.py  state_machine.py  updater.py
src/neurabreak/data/: database.py  journal.py  models.py
src/neurabreak/notifications/: audio.py  escalation.py  manager.py
src/neurabreak/ui/: app.py  branding.py  break_screen.py  dashboard.py  preview.py  settings.py  tray.py
tests/integration/: test_detection_pipeline.py  test_notification_flow.py
tests/unit/: test_app_quit_guard.py  test_audio_manager.py  test_config.py  test_database.py  test_detection_service.py  test_inference_engine.py  test_journal.py  test_logging.py  test_state_machine.py  test_tray.py
tools/: annotate_helper.py  benchmark.py  collect_data.py  dataset_stats.py  install_gpu_torch.py  profile_compute.py
training/: dataset.yaml  evaluate.py  export.py  hyperparams.yaml  train.py
